@@ -145,6 +145,7 @@
  ?<I>option</I>? ?<I>value</I> <I>option</I> <I>value</I> ...?
 </DD>
 <DD><I>pathName</I> <A HREF="#get"><B>get</B></A></DD>
+<DD><I>pathName</I> <A HREF="#getentry"><B>getentry</B></A></DD>
 <DD><I>pathName</I> <A HREF="#getlistbox"><B>getlistbox</B></A></DD>
 <DD><I>pathName</I> <A HREF="#getvalue"><B>getvalue</B></A></DD>
 <DD><I>pathName</I> <A HREF="#icursor"><B>icursor</B></A>
@@ -312,6 +313,13 @@ by the creation command.  Read-only options are not be modified.
 </DT><DD>
 
 Returns the current contents of the entry.
+
+</DD></DL>
+
+<DL><DT><A NAME="getentry"><I>pathName</I> <B>getentry</B></A>
+</DT><DD>
+
+Returns the path to the contained entry widget.
 
 </DD></DL>
 
